<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DisplayItemDataActivity">
    <TextView
        android:id="@+id/userFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:layout_marginTop="10dp"
        android:textSize="32sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/userSpeciality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speciality"
        android:textSize="32sp"/>

</LinearLayout>