<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        app:civ_border_width="2dp"
        android:layout_marginRight="10dp"
        app:civ_border_color="#FFF"
        android:src="@drawable/aliluchloutfi"/>

    <LinearLayout
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/loutfi_aliluch"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/_27_05_2020"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/_10_15"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#28A745"
            android:drawableLeft="@drawable/ic_check"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:drawableStart="@drawable/ic_check" />

        <Button
            android:id="@+id/declineButton"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#f44336"
            android:drawableLeft="@drawable/ic_close"
            android:text="@string/decline"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:drawableStart="@drawable/ic_close" />
    </LinearLayout>

</LinearLayout>