<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_11_05_2020"
        android:textSize="18sp"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:layout_marginStart="5dp"
        app:drawableLeftCompat="@drawable/ic_calendar" />

    <TextView
        android:id="@+id/hospitalName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hospital_moulay_youssef"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:layout_marginLeft="5dp"
        android:padding="5dp"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="5dp"
        app:drawableLeftCompat="@drawable/ic_hospital" />

    <TextView
        android:id="@+id/disease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/broken_hand"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        app:drawableLeftCompat="@drawable/healthcareplus" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/_300dh"
        android:textSize="16sp"
        android:padding="5dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="5dp"
        app:drawableLeftCompat="@drawable/ic_money"
        android:layout_marginStart="5dp" />

</LinearLayout>